# clipvault

./: LICENSE  README.md  pyproject.toml
clipvault/: __init__.py  app.py  clipboard_backends.py  history.py
docs/: implementation-plan.md
install/: clipvault-wsl.ps1  clipvault.sh
scripts/: install-global.sh  uninstall.sh
tests/: test_app_render.py  test_history.py  test_input_responsiveness.py
